k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keystore-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: simple-keystore.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keystore
                port:
                  number: 5000
